--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -16,7 +16,7 @@
 
 <body>
     
-    <header class="container-fluid">
+    <header class="container-fluid col-12">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html"><img class="logonegocio" src="../images/logoDelfos.png"alt="Logo Delfos"></a>
