--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- LINK DE CSS -->
     <link rel="stylesheet" href="./style.css/styles.css">
-    <link rel="stylesheet" href="./style.css/reset.css">
     <title>Home</title>
 </head>
 
-<body>
+<body class="responsive">
+
     <header class="container-fluid">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="row navbar navbar-expand-lg col-12">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html"><img class="logonegocio" src="./images/logoDelfos.png"alt="Logo Delfos"></a>
                 <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse flex-column flex-md-row" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
@@ -42,10 +42,10 @@
         </nav>
     </header>
 
-    <main class="carousel-principal">
+    <main class="carousel-principal col-12">
 
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-            <div class="carousel-indicators">
+            <div class="row carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
@@ -53,10 +53,10 @@
             <div class="carousel-inner">
 
                 <div class="carousel-item active">
-                    <img src="./images/merceria interior.jpg" class="d-block w-100" alt="primera imagen del carousel">
+                    <img src="./images/hands-buttons.jpg" class="d-block w-100" alt="primera imagen del carousel">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>DELFOS</h5>
-                        <p>La tienda de Articulos para tu Ropa</p>
+                        <p class="primerComentario">La tienda de Articulos para tu Ropa</p>
                     </div>
                 </div>
 
@@ -64,7 +64,7 @@
                     <img src="./images/various-colour-threads.jpg" class="d-block w-100" alt="segunda imagen del carousel">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Somos la mejor opcion</h5>
-                        <p>Todo lo que necesitas para Vestimenta y Mas.</p>
+                        <p class="segundoComentario">Todo lo que necesitas para Vestimenta y Mas.</p>
                     </div>
                 </div>
 
@@ -72,7 +72,7 @@
                     <img src="./images/telas.jpg" class="d-block w-100" alt="tercera imagen del carousel">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>La mejor Calidad</h5>
-                        <p>Tenemos la mejor variedad en Productos</p>
+                        <p class="tercerComentario">Tenemos la mejor variedad en Productos</p>
                     </div>
                 </div>
 
