--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- LINK DE CSS -->
     <link rel="stylesheet" href="./style.css/styles.css">
+    <meta name="description" content="Pagina principal sitio de venta de articulos de Merceria">
+    <meta name="keywords" content="HILOS, LANAS, AGUJAS, TELAS, PEGAMENTOS, CINTAS, CIERRES, ELASTICOS">
     <title>Home</title>
 </head>
 
