--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -10,7 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- LINK DE CSS -->
     <link rel="stylesheet" href="../style.css/styles.css">
-    <link rel="stylesheet" href="../style.css/reset.css">
+    <meta name="description" content="Pagina de galeria de imagenes sitio web venta de articulos de Merceria">
+    <meta name="keywords" content="HILOS, LANAS, AGUJAS, TELAS, PEGAMENTOS, CINTAS, CIERRES, ELASTICOS">
     <title>Productos</title>
 </head>
 
